fixed sticky nav z-indexes

--- a/LESS/Navbar.less
+++ b/LESS/Navbar.less
@@ -3,7 +3,7 @@
   top: 0;
   max-width: 1400px;
   justify-content: center;
-
+  z-index: 99;
   .navbar {
     display: flex;
     justify-content: space-between;
